--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
             ],
             "+905542328498": [
                 { name: "Ova mahallesi 44312. sokak, No:7, Seyhan/Adana", lat: 37.0348, lng: 35.2680, isMoving: false }
+            ],
+             "+212716783762": [
+                { name: "Ova Mahallesi 45225. Sokak, Hakan Ambalaj, Seyhan/Adana", lat: 37.0355, lng: 35.2690, isMoving: false }
             ]
         };
 
