--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             { name: "Thailand", code: "+66", flag: "🇹🇭", pattern: /^8[0-9]{8}$/ },
             { name: "Ireland", code: "+353", flag: "🇮🇪", pattern: /^8[0-9]{8}$/ },
             { name: "Israel", code: "+972", flag: "🇮🇱", pattern: /^5[0-9]{8}$/ },
-            { name: "Morocco", code: "+212", flag: "🇲🇦", pattern: /^6[0-9]{8}$/ },
+            { name: "Morocco", code: "+212", flag: "🇲🇦", pattern: /^[5-7][0-9]{8}$/ },
             { name: "Greece", code: "+30", flag: "🇬🇷", pattern: /^69[0-9]{8}$/ }
         ];
 
