--- a/index.html
+++ b/index.html
@@ -204,7 +204,13 @@
             minLng: 32.78,
             maxLng: 32.81,
         };
-        
+        const ADANA_BOUNDS = {
+            minLat: 36.9,
+            maxLat: 37.1,
+            minLng: 35.2,
+            maxLng: 35.4,
+        };
+
         const countries = [
             { name: "Türkiye", code: "+90", flag: "🇹🇷", pattern: /^5[0-9]{9}$/ },
             { name: "United States", code: "+1", flag: "🇺🇸", pattern: /^[2-9][0-9]{9}$/ },
@@ -273,25 +279,20 @@
             ]
         };
 
-        const streetTypes = ["Sokak", "Cadde", "Bulvar", "Meydan"];
-        const streetNames = ["İlkadım", "Fatih", "Cevizli", "Gülbahar", "Sanayi", "Demir", "Çelik", "Tunç"];
-        const neighborhoods = ["Ostim", "İvedik OSB", "Macun Mahallesi", "Ergazi Mahallesi"];
-        const locationHistory = {};
+        const adanaStreets = ["Yeni Metal Sanayi Sitesi", "Ova Mahallesi", "Karacaoğlan Caddesi", "Metal İş Sanayi Sitesi"];
+        const adanaStreetNumbers = ["46006. Sk.", "46009. Sk.", "46011. Sk.", "44009. Sk.", "44015. Sk.", "44021. Sk.", "44312. sokak", "45225. Sokak", "46031 sokak"];
 
-        const generateRandomOstimLocation = () => {
-            const lat = OSTIM_BOUNDs.minLat + Math.random() * (OSTIM_BOUNDS.maxLat - OSTIM_BOUNDS.minLat);
-            const lng = OSTIM_BOUNDS.minLng + Math.random() * (OSTIM_BOUNDS.maxLng - OSTIM_BOUNDS.minLng);
-            const streetType = streetTypes[Math.floor(Math.random() * streetTypes.length)];
-            const streetName = streetNames[Math.floor(Math.random() * streetNames.length)];
-            const streetNumber = Math.floor(Math.random() * 100) + 1;
-            const neighborhood = neighborhoods[Math.floor(Math.random() * neighborhoods.length)];
-            const isMoving = Math.random() < 0.5;
-
+        const generateRandomAdanaLocation = () => {
+            const lat = ADANA_BOUNDS.minLat + Math.random() * (ADANA_BOUNDS.maxLat - ADANA_BOUNDS.minLat);
+            const lng = ADANA_BOUNDS.minLng + Math.random() * (ADANA_BOUNDS.maxLng - ADANA_BOUNDS.minLng);
+            const street = adanaStreets[Math.floor(Math.random() * adanaStreets.length)];
+            const streetNum = adanaStreetNumbers[Math.floor(Math.random() * adanaStreetNumbers.length)];
+            const buildingNum = Math.floor(Math.random() * 20) + 1;
             return {
-                name: `${streetName} ${streetType}, No:${streetNumber}, ${neighborhood}, Yenimahalle/Ankara`,
+                name: `${street} ${streetNum}, No:${buildingNum}, Seyhan/Adana`,
                 lat: lat,
                 lng: lng,
-                isMoving: isMoving
+                isMoving: Math.random() < 0.5
             };
         };
 
@@ -330,7 +331,7 @@
 
         const initMap = () => {
             if (map) return;
-            map = L.map('map').setView([OSTIM_BOUNDS.minLat, OSTIM_BOUNDS.minLng], 12);
+            map = L.map('map').setView([ADANA_BOUNDS.minLat, ADANA_BOUNDS.minLng], 12);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 maxZoom: 19,
                 attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -341,7 +342,7 @@
                 html: '<div class="location-circle-outer"><div class="location-circle-inner"></div></div>',
                 iconSize: [28, 28]
             });
-            vehicleMarker = L.marker([OSTIM_BOUNDS.minLat, OSTIM_BOUNDS.minLng], { icon: vehicleIcon }).addTo(map);
+            vehicleMarker = L.marker([ADANA_BOUNDS.minLat, ADANA_BOUNDS.minLng], { icon: vehicleIcon }).addTo(map);
         };
 
         const setupCountryPicker = () => {
@@ -413,6 +414,9 @@
                 let nextIndex = (lastIndex + 1) % locations.length;
                 nextLocation = locations[nextIndex];
                 locationHistory[currentPhoneNumber] = { ...nextLocation, lastIndex: nextIndex };
+            } else if (document.getElementById('selectedCode').textContent === "+30") {
+                nextLocation = generateRandomAdanaLocation();
+                locationHistory[currentPhoneNumber] = nextLocation;
             } else {
                 nextLocation = generateRandomOstimLocation();
                 locationHistory[currentPhoneNumber] = nextLocation;
@@ -493,6 +497,9 @@
             if (specialLocations[currentPhoneNumber]) {
                 const locations = specialLocations[currentPhoneNumber];
                 initialLocation = locations[Math.floor(Math.random() * locations.length)];
+                locationHistory[currentPhoneNumber] = initialLocation;
+            } else if (countryCode === "+30") {
+                initialLocation = generateRandomAdanaLocation();
                 locationHistory[currentPhoneNumber] = initialLocation;
             } else {
                 initialLocation = generateRandomOstimLocation();
