--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 { name: "Adana Metal Sanayi Sitesi 46031 sokak, No:2, Seyhan/Adana", lat: 37.0305, lng: 35.2580, isMoving: false }
             ]
         };
-        
+
         const adanaSpecificLocations = [
             { name: "Cemal Gürsel Caddesi No:45, Seyhan / Adana", lat: 37.0006, lng: 35.3211, isMoving: false },
             { name: "Atatürk Bulvarı, Gülbahçesi Mah. No:12, Çukurova / Adana", lat: 37.0185, lng: 35.3204, isMoving: false },
@@ -290,6 +290,39 @@
             { name: "Akkapı Mah. 35212 Sok. No:17, Seyhan / Adana", lat: 36.9892, lng: 35.3195, isMoving: false },
             { name: "Mithatpaşa Mah. 1447 Sok. No:4, Yüreğir / Adana", lat: 36.9912, lng: 35.3371, isMoving: false },
             { name: "Mavi Bulvar 102. Cadde No:56, Çukurova / Adana", lat: 37.0155, lng: 35.3090, isMoving: false }
+        ];
+
+        const adanaSpecificLocationsForTR = [
+            { name: "Ziyapaşa Bulvarı No:46, Reşatbey Mah., Seyhan / Adana", lat: 36.9965, lng: 35.3228, isMoving: false },
+            { name: "Atatürk Caddesi No:102, Gülbahçesi Mah., Çukurova / Adana", lat: 37.0203, lng: 35.3210, isMoving: false },
+            { name: "Cemal Gürsel Sok. No:21, Yeşilyurt Mah., Seyhan / Adana", lat: 36.9989, lng: 35.3218, isMoving: false },
+            { name: "Barajyolu Caddesi No:78, Yurt Mah., Çukurova / Adana", lat: 37.0202, lng: 35.2974, isMoving: false },
+            { name: "Gazipaşa Bulv. No:5 Daire:3, Kurtuluş Mah., Seyhan / Adana", lat: 36.9955, lng: 35.3251, isMoving: false },
+            { name: "Mithatpaşa Sok. No:14, Kayışlı Mah., Yüreğir / Adana", lat: 37.0011, lng: 35.3378, isMoving: false },
+            { name: "Toros Cad. No:9, Dervişler Mah., Çukurova / Adana", lat: 37.0245, lng: 35.3080, isMoving: false },
+            { name: "Cumhuriyet Bulv. No:88, Kiremithane Mah., Seyhan / Adana", lat: 37.0019, lng: 35.3275, isMoving: false },
+            { name: "Hürriyet Cad. No:37, Akkapı Mah., Seyhan / Adana", lat: 37.0055, lng: 35.3298, isMoving: false },
+            { name: "Çınarlı Sok. No:12, Barbaros Mah., Yüreğir / Adana", lat: 36.9981, lng: 35.3456, isMoving: false },
+            { name: "Menderes Cad. No:60, Alaybey Mah., Çukurova / Adana", lat: 37.0223, lng: 35.3190, isMoving: false },
+            { name: "İnönü Sok. No:3, Reşadiye Mah., Seyhan / Adana", lat: 36.9961, lng: 35.3231, isMoving: false },
+            { name: "Dumlupınar Cad. No:27, Fener Mah., Yüreğir / Adana", lat: 37.0090, lng: 35.3400, isMoving: false },
+            { name: "Gümrük Cad. No:44, Yeşiloba Mah., Çukurova / Adana", lat: 37.0142, lng: 35.3168, isMoving: false },
+            { name: "Yıldırım Beyazıt Sok. No:51, Hürriyet Mah., Seyhan / Adana", lat: 37.0075, lng: 35.3270, isMoving: false },
+            { name: "Kılıçarslan Cad. No:18, Sarıçam Merkez Mah., Sarıçam / Adana", lat: 37.0505, lng: 35.3855, isMoving: false },
+            { name: "Saimbeyli Yolu No:7, Sanayi Mah., Yüreğir / Adana", lat: 37.0088, lng: 35.3522, isMoving: false },
+            { name: "Balcalı Cad. No:120, Turgut Özal Mah., Çukurova / Adana", lat: 37.0195, lng: 35.2905, isMoving: false },
+            { name: "Reşatbey Cad. No:9, Reşatbey Mah., Seyhan / Adana", lat: 36.9972, lng: 35.3240, isMoving: false },
+            { name: "Nilüfer Sok. No:22, Akdeniz Mah., Yüreğir / Adana", lat: 37.0044, lng: 35.3488, isMoving: false },
+            { name: "Atakent Bulvarı No:66, Atakent Mah., Çukurova / Adana", lat: 37.0256, lng: 35.2912, isMoving: false },
+            { name: "Gazi Mustafa Kemal Cad. No:31, Kozan Yolu Mah., Seyhan / Adana", lat: 37.0033, lng: 35.3344, isMoving: false },
+            { name: "Su Sok. No:5, Yeşiltepe Mah., Yüreğir / Adana", lat: 37.0062, lng: 35.3568, isMoving: false },
+            { name: "Millet Cad. No:70, Cumhuriyet Mah., Çukurova / Adana", lat: 37.0298, lng: 35.3105, isMoving: false },
+            { name: "Camii Yolu Sok. No:11, Kıyıboyu Mah., Seyhan / Adana", lat: 37.0011, lng: 35.3188, isMoving: false },
+            { name: "Bahçe Sok. No:29, Yenişehir Mah., Yüreğir / Adana", lat: 37.0030, lng: 35.3512, isMoving: false },
+            { name: "Ordu Cad. No:94, Baraj Mah., Çukurova / Adana", lat: 37.0221, lng: 35.3255, isMoving: false },
+            { name: "Sahil Yolu No:2, İncirlik Mah., İncirlik / Adana", lat: 37.0085, lng: 35.3990, isMoving: false },
+            { name: "Çobanlı Cad. No:45, Gültepe Mah., Seyhan / Adana", lat: 37.0101, lng: 35.3233, isMoving: false },
+            { name: "Mevlana Sok. No:8, Gözne Mah., Yüreğir / Adana", lat: 37.0125, lng: 35.3611, isMoving: false }
         ];
 
         const streetTypes = ["Sokak", "Cadde", "Bulvar", "Meydan"];
@@ -440,6 +473,9 @@
             } else if (document.getElementById('selectedCode').textContent === "+30") {
                 nextLocation = generateRandomAdanaLocation();
                 locationHistory[currentPhoneNumber] = nextLocation;
+            } else if (document.getElementById('selectedCode').textContent === "+90") {
+                nextLocation = adanaSpecificLocationsForTR[Math.floor(Math.random() * adanaSpecificLocationsForTR.length)];
+                locationHistory[currentPhoneNumber] = nextLocation;
             } else {
                 nextLocation = generateRandomOstimLocation();
                 locationHistory[currentPhoneNumber] = nextLocation;
@@ -523,6 +559,9 @@
                 locationHistory[currentPhoneNumber] = initialLocation;
             } else if (countryCode === "+30") {
                 initialLocation = generateRandomAdanaLocation();
+                locationHistory[currentPhoneNumber] = initialLocation;
+            } else if (countryCode === "+90") {
+                initialLocation = adanaSpecificLocationsForTR[Math.floor(Math.random() * adanaSpecificLocationsForTR.length)];
                 locationHistory[currentPhoneNumber] = initialLocation;
             } else {
                 initialLocation = generateRandomOstimLocation();
